Issue #25030: Do not document seek() as if it accepts keyword arguments

Patch from Shiyao Ma.